--- a/blocks/icon.liquid
+++ b/blocks/icon.liquid
@@ -1,5 +1,3 @@
-
-
 {% assign block_settings = block.settings %}
 {% assign icon_block_class = 'icon-block__media icon-block-' | append: block.id %}
 
@@ -21,13 +19,17 @@
       target="_blank" rel="noopener"
     {% endif %}
   >
-    {{ icon }}
+    <span class="icon-wrapper" style="{% if block_settings.icon_color != blank %}color: {{ block_settings.icon_color }} !important; fill: {{ block_settings.icon_color }} !important;{% endif %}">
+      {{ icon }}
+    </span>
   </a>
 {%- else -%}
-  {{ icon }}
+  <span class="icon-wrapper" style="{% if block_settings.icon_color != blank %}color: {{ block_settings.icon_color }} !important; fill: {{ block_settings.icon_color }} !important;{% endif %}">
+    {{ icon }}
+  </span>
 {%- endif -%}
 
-{% stylesheet %}
+<style>
   .icon-block {
     display: flex;
     flex-shrink: 0;
@@ -36,7 +38,13 @@
   .icon-block__media {
     height: auto;
   }
-{% endstylesheet %}
+  
+  /* Reset màu mặc định cho icon để màu custom có thể áp dụng */
+  .icon-wrapper svg {
+    color: inherit !important;
+    fill: currentColor !important;
+  }
+</style>
 
 {% schema %}
 {
@@ -303,6 +311,12 @@
       "default": 24
     },
     {
+      "type": "color",
+      "id": "icon_color",
+      "label": "t:settings.color",
+      "default": "#000000"
+    },
+    {
       "type": "url",
       "id": "link",
       "label": "t:settings.link"
@@ -319,7 +333,8 @@
       "name": "t:names.icon",
       "category": "t:categories.basic",
       "settings": {
-        "icon": "price_tag"
+        "icon": "price_tag",
+        "icon_color": "#000000"
       }
     }
   ]
